# experiment-harness — the fail-loud Rust tool for the mechanical steps of a
# blind A/B authoring experiment (reading-copy assembly, arm shuffle + seal,
# seal verification).
#
# A SEPARATE in-repo workspace (the same pattern as `bench/` and `studio/`): its
# own `[workspace]` so the root workspace's build / CI / pre-commit gates never
# compile it. It depends on nothing in the core crates — it is a pure data
# transform over the experiment artifacts on disk.
#
# Origin: R479 deferred this. The scale-floor and A/B experiments did
# reading-copy assembly, the coin-flip shuffle, and metadata stripping with
# one-off Python/bash that was then deleted — non-reproducible, and a silent-fail
# language doing the work in a project whose whole thesis is fail-loud
# verification. This crate is the repayment: every step errors loudly and lives
# under version control.
[workspace]

[package]
name = "experiment-harness"
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
license = "MIT OR Apache-2.0"
publish = false
description = "Fail-loud reading-copy assembly, shuffle, and seal for blind A/B authoring experiments"

[[bin]]
name = "experiment-harness"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
