[package]
name = "cascade-measurement"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "cascade-measure"
path = "src/main.rs"

[dependencies]
mnemosyne-cascade = { path = "../../../crates/mnemosyne-cascade" }
mnemosyne-facts = { path = "../../../crates/mnemosyne-facts" }

salsa.workspace = true

rand.workspace = true
rand_chacha.workspace = true

serde.workspace = true
serde_json.workspace = true

anyhow.workspace = true
hdrhistogram.workspace = true
clap.workspace = true

[dev-dependencies]
criterion.workspace = true
