[package]
name = "closure-measurement"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "closure-measure"
path = "src/main.rs"

[dependencies]
codegen-prototype = { path = "../codegen-prototype" }

serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
sha2.workspace = true
